front page add news and Announcements

--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,9 @@ body {
   color: var(--bs-nav-pills-link-active-color);
   background-color: #ff383f !important;
 }
+.bg-red{
+  background-color: #ff383f !important;
+}
 
 /* socail icon */
 .social-icon a {
@@ -57,7 +60,7 @@ body {
 .carousel-item img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: fill;
   background-color: rgba(rgb(0, 0, 0), rgb(0, 0, 0), rgb(0, 0, 0));
 }
 @media (min-width: 40em) {
@@ -547,4 +550,72 @@ nav > div a.nav-item.nav-link:focus {
 .results p {
   font-weight: 600;
   color: #ff383f;
+}
+
+/* our news section */
+.news .owl-carousel .item {
+  border: solid 1px rgb(139, 139, 139);
+  text-align: center;
+  background-color: #dbd9d9;
+
+  --c: #111560; /* the color */
+  
+  color: #111560;
+  background: 
+    linear-gradient(90deg,rgb(235, 234, 234) 50%,var(--c) 0) calc(100% - var(--_p,0%))/200% 100%,
+    linear-gradient(var(--c) 0 0) 0% 100%/var(--_p,0%) 100% no-repeat;
+  -webkit-background-clip: text,padding-box;
+          background-clip: text,padding-box;
+  transition: 0.5s; 
+
+}
+.news .owl-carousel .item:hover {
+  --_p: 100%;
+  color:#fff;
+  
+}
+
+.news .owl-carousel .item:hover .btn {
+    border-radius: 0px;
+    width: 100%;
+    background-color: #ff383f;
+    color: white;
+}
+
+.news .owl-carousel .item p{
+  padding: 30px 10px;
+
+}
+.news .owl-carousel .item .btn{
+  border-radius: 0px;
+  width: 100%;
+  /* background-color: white; */
+}
+
+.owl-theme .owl-nav [class*=owl-] {
+  color: #FFF;
+  font-size: 14px;
+  margin: 5px;
+  padding: 4px 7px;
+  background: #D6D6D6;
+  display: inline-block;
+  cursor: pointer;
+  border-radius: 3px;
+  display: none !important;
+}
+
+.hover-news {
+  --c: #1095c1; /* the color */
+  
+  color: #111560;
+  background: 
+    linear-gradient(90deg,#fff 50%,var(--c) 0) calc(100% - var(--_p,0%))/200% 100%,
+    linear-gradient(var(--c) 0 0) 0% 100%/var(--_p,0%) 100% no-repeat;
+  -webkit-background-clip: text,padding-box;
+          background-clip: text,padding-box;
+  transition: 0.5s;
+}
+.hover-news:hover {
+  --_p: 100%;
+  color:#fff;
 }
