--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,10 @@ body {
   /* color: rgba(var(--bs-primary-rgb), var(--bs-text-opacity)) !important; */
   color: #111560 !important;
 }
+a {
+  /* color: var(--bs-link-color); */
+  text-decoration: none;
+}
 
 /* socail icon */
 .social-icon a {
@@ -629,4 +633,278 @@ nav > div a.nav-item.nav-link:focus {
 .side-bar .list-group-item:hover{
   background-color:  rgb(240, 238, 238) !important;
   /* color: rgb(211, 209, 209); */
+}
+
+
+/* Images Gallry gallery page
+--------------------------------*/
+/* #images-gallery {
+  background: url("../img/about-bg.jpg") center top no-repeat fixed;
+  background-size: cover;
+  padding: 0px 0 40px 0;
+  position: relative;
+}
+
+#images-gallery::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  /* background: rgba(255, 255, 255, 0.92); */
+  /* z-index: 9; */
+/* } */
+
+/*#images-gallery .container {
+  position: relative;
+  z-index: 10;
+} */
+
+#images-gallery .images-gallery-col {
+  background: #fff;
+  border-radius: 0 0 4px 4px;
+  box-shadow: 0px 2px 12px rgba(0, 0, 0, 0.08);
+  margin-bottom: 20px;
+}
+
+#images-gallery .images-gallery-col .img {
+  position: relative;
+}
+#images-gallery .images-gallery-col .img img:hover {
+  opacity: 0.3;
+  transition-duration: 1s;
+}
+
+#images-gallery .images-gallery-col .img img {
+  border-radius: 4px 4px 0 0;
+  width: 100%;
+  height: 250px !important;
+}
+
+#images-gallery .images-gallery-col .icon {
+  width: 64px;
+  height: 64px;
+  padding-top: 8px;
+  text-align: center;
+  position: absolute;
+  background-color: #d22d16;
+  border-radius: 50%;
+  text-align: center;
+  border: 4px solid #fff;
+  left: calc(50% - 32px);
+  bottom: -30px;
+  transition: 0.3s;
+}
+
+#images-gallery .images-gallery-col i {
+  font-size: 36px;
+  line-height: 1;
+  color: #fff;
+  transition: 0.3s;
+}
+
+#images-gallery .images-gallery-col:hover .icon {
+  background-color: #fff;
+}
+
+#images-gallery .images-gallery-col:hover i {
+  color: #d22d16;
+}
+
+#images-gallery .images-gallery-col h2 {
+  color: #000;
+  text-align: center;
+  font-weight: 700;
+  font-size: 20px;
+  padding: 0;
+  margin: 10px 0 30px 0;
+}
+
+#images-gallery .images-gallery-col h2 {
+  color: #000;
+}
+
+#images-gallery .images-gallery-col h2:hover {
+  color: #d22d16;
+}
+
+#images-gallery .images-gallery-col p {
+  font-size: 14px;
+  line-height: 24px;
+  color: #333;
+  margin-bottom: 0;
+  padding: 0 20px 20px 20px;
+}
+
+#images-gallery .images-gallery-col a {
+  text-decoration: none;
+}
+
+/* Portfolio Section
+--------------------------------*/
+#portfolio {
+  padding: 0px 0;
+}
+
+#portfolio #portfolio-flters {
+  padding: 0;
+  margin: 5px 0 35px 0;
+  list-style: none;
+  text-align: center;
+}
+
+#portfolio #portfolio-flters li {
+  cursor: pointer;
+  margin: 15px 15px 15px 0;
+  display: inline-block;
+  padding: 10px 20px;
+  font-size: 12px;
+  line-height: 20px;
+  color: #666666;
+  border-radius: 4px;
+  text-transform: uppercase;
+  background: #fff;
+  margin-bottom: 5px;
+  transition: all 0.3s ease-in-out;
+}
+
+#portfolio #portfolio-flters li:hover,
+#portfolio #portfolio-flters li.filter-active {
+  background: #ff6700;
+  color: #fff;
+}
+
+#portfolio #portfolio-flters li:last-child {
+  margin-right: 0;
+}
+
+#portfolio .portfolio-wrap {
+  box-shadow: 0px 2px 12px rgba(0, 0, 0, 0.08);
+  transition: 0.3s;
+}
+
+#portfolio .portfolio-wrap:hover {
+  box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.16);
+}
+
+#portfolio .portfolio-item {
+  position: relative;
+  height: 315px;
+  overflow: hidden;
+}
+
+#portfolio .portfolio-item figure {
+  background: #000;
+  overflow: hidden;
+  height: 240px;
+  position: relative;
+  border-radius: 4px 4px 0 0;
+  margin: 0;
+}
+
+#portfolio .portfolio-item figure:hover img {
+  opacity: 0.4;
+  transition: 0.3s;
+}
+
+#portfolio .portfolio-item figure .link-preview,
+#portfolio .portfolio-item figure .link-details {
+  position: absolute;
+  display: inline-block;
+  visibility: hidden;
+  line-height: 1;
+  text-align: center;
+  width: 36px;
+  height: 36px;
+  background: #fff;
+  border-radius: 50%;
+  transition: 0.2s;
+}
+
+#portfolio .portfolio-item figure .link-preview i,
+#portfolio .portfolio-item figure .link-details i {
+  padding-top: 6px;
+  font-size: 22px;
+  color: #333;
+}
+
+#portfolio .portfolio-item figure .link-preview:hover,
+#portfolio .portfolio-item figure .link-details:hover {
+  background: #ff0f23;
+}
+
+#portfolio .portfolio-item figure .link-preview:hover i svg,
+#portfolio .portfolio-item figure .link-details:hover i svg{
+  color: #fff !important;
+}
+
+#portfolio .portfolio-item figure .link-preview {
+  left: calc(50% - 38px);
+  top: calc(50% - 18px);
+}
+
+#portfolio .portfolio-item figure .link-details {
+  right: calc(50% - 38px);
+  top: calc(50% - 18px);
+}
+
+#portfolio .portfolio-item figure:hover .link-preview {
+  visibility: visible;
+  left: calc(50% - 10px);
+}
+
+#portfolio .portfolio-item figure:hover .link-details {
+  visibility: visible;
+  right: calc(50% - 44px);
+}
+
+#portfolio .portfolio-item .portfolio-info {
+  background: #fff;
+  text-align: center;
+  padding: 30px;
+  height: 90px;
+  border-radius: 0 0 3px 3px;
+}
+
+#portfolio .portfolio-item .portfolio-info h4 {
+  font-size: 18px;
+  line-height: 1px;
+  font-weight: 700;
+  margin-bottom: 18px;
+  padding-bottom: 0;
+}
+
+#portfolio .portfolio-item .portfolio-info h4 a {
+  color: #333;
+}
+
+#portfolio .portfolio-item .portfolio-info h4 a:hover {
+  color: #ff6700;
+}
+
+#portfolio .portfolio-item .portfolio-info p {
+  padding: 0;
+  margin: 0;
+  color: #b8b8b8;
+  font-weight: 500;
+  font-size: 14px;
+  text-transform: uppercase;
+}
+#portfolio .portfolio-item figure img {
+  width: 100% !important;
+  height: 100vh !important;
+  object-fit: cover !important;
+}
+
+.contacu-us {
+  border: solid 1px red;
+  padding: 30px;
+  background-color: rgb(238, 238, 238);
+}
+
+.activities-img {
+  width: 100%;
+  max-height: 400px;
+  margin-bottom: 30px;
 }
